@@ -24,6 +24,7 @@
 	[ ] Ghost
 	[ ] Release
 	[X] Account name (Sub done, module not)
+	[X] Logout
 [ ] ChanServ
 	[ ] Register
 	[ ] Drop
